--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -47,13 +49,45 @@ q:before, q:after {
   content: none;
 }
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+hr {
+  display: none;
 }
 
-body {
-  background-color: #fff;
+img {
+  vertical-align: middle;
+}
+
+button {
+  background-color: transparent;
+  cursor: pointer;
+}
+
+b, strong {
+  font-weight: normal;
+}
+
+fieldset, iframe {
+  width: 100%;
+}
+
+img, a, frame, iframe, fieldset {
+  border: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+table {
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+
+caption {
+  height: 0;
+  font-size: 0;
+  overflow: hidden;
 }
 
 /* Font Style */
