--- a/css/font.scss
+++ b/css/font.scss
@@ -3,6 +3,7 @@
 
 @import url("https://p.typekit.net/p.css?s=1&k=oyq3azw&ht=tk&f=34862.34863.34866.34867&a=16670750&app=typekit&e=css");
 
+/* 영문폰트 */
 @font-face {
   font-family:"arboria";
   src:url("https://use.typekit.net/af/2ed003/00000000000000003b9b011c/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("woff2"),url("https://use.typekit.net/af/2ed003/00000000000000003b9b011c/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("woff"),url("https://use.typekit.net/af/2ed003/00000000000000003b9b011c/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("opentype");
@@ -27,4 +28,47 @@
   font-display:auto;font-style:italic;font-weight:700;font-stretch:normal;
 }
 
+/* 한글폰트 */
+@font-face {
+  font-family:'SpoqaHanSansNeo';
+  font-style:normal;
+  font-weight:300;
+  src:url(//ak/font/SpoqaHanSansNeo-Light.eot);
+  src:url(//ak/font/SpoqaHanSansNeo-Light.eot?#iefix) format('embedded-opentype'),
+  url(//ak/font/SpoqaHanSansNeo-Light.woff2) format('woff2'),
+  url(//ak/font/SpoqaHanSansNeo-Light.woff) format('woff'),
+  url(//ak/font/SpoqaHanSansNeo-Light.ttf) format('truetype');
+}
+@font-face {
+  font-family:'SpoqaHanSansNeo';
+  font-style:normal;
+  font-weight:400;
+  src:url(//ak/font/SpoqaHanSansNeo-Regular.eot);
+  src:url(//ak/font/SpoqaHanSansNeo-Regular.eot?#iefix) format('embedded-opentype'),
+  url(//ak/font/SpoqaHanSansNeo-Regular.woff2) format('woff2'),
+  url(//ak/font/SpoqaHanSansNeo-Regular.woff) format('woff'),
+  url(//ak/font/SpoqaHanSansNeo-Regular.ttf) format('truetype');
+}
+@font-face {
+  font-family:'SpoqaHanSansNeo';
+  font-style:normal;
+  font-weight:500;
+  src:url(//ak/font/SpoqaHanSansNeo-Medium.eot);
+  src:url(//ak/font/SpoqaHanSansNeo-Medium.eot?#iefix) format('embedded-opentype'),
+  url(//ak/font/SpoqaHanSansNeo-Medium.woff2) format('woff2'),
+  url(//ak/font/SpoqaHanSansNeo-Medium.woff) format('woff'),
+  url(//ak/font/SpoqaHanSansNeo-Medium.ttf) format('truetype');
+}
+@font-face {
+  font-family:'SpoqaHanSansNeo';
+  font-style:normal;
+  font-weight:700;
+  src:url(//ak/font/SpoqaHanSansNeo-Bold.eot);
+  src:url(//ak/font/SpoqaHanSansNeo-Bold.eot?#iefix) format('embedded-opentype'),
+  url(//ak/font/SpoqaHanSansNeo-Bold.woff2) format('woff2'),
+  url(//ak/font/SpoqaHanSansNeo-Bold.woff) format('woff'),
+  url(//ak/font/SpoqaHanSansNeo-Bold.ttf) format('truetype');
+}
 .tk-arboria { font-family: "arboria",sans-serif; }
+
+
