--- a/css/reset.scss
+++ b/css/reset.scss
@@ -54,7 +54,7 @@ button {
   background-color:transparent; cursor:pointer;
 }
 b, strong {
-  font-weight:normal;
+  font-weight:700;
 }
 fieldset, iframe {
   width:100%;
