--- a/css/reset.scss
+++ b/css/reset.scss
@@ -21,6 +21,8 @@ time, mark, audio, video {
   border: 0;
   font-size: 100%;
   font-family: 'SpoqaHanSansNeo', "돋움", Dotum, Arial, sans-serif;
+  font-weight:400;
+  font-style:normal;
   vertical-align: baseline;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
