--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url("https://p.typekit.net/p.css?s=1&k=oyq3azw&ht=tk&f=34862.34863.34866.34867&a=16670750&app=typekit&e=css");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,7 +21,9 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font-family: "SpoqaHanSansNeo", "돋움", Dotum, Arial, sans-serif;
+  font-weight: 400;
+  font-style: normal;
   vertical-align: baseline;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -63,7 +67,7 @@ button {
 }
 
 b, strong {
-  font-weight: normal;
+  font-weight: 700;
 }
 
 fieldset, iframe {
@@ -91,8 +95,115 @@ caption {
 }
 
 /* Font Style */
+/* 영문폰트 */
+@font-face {
+  font-family: "arboria";
+  src: url("https://use.typekit.net/af/2ed003/00000000000000003b9b011c/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("woff2"), url("https://use.typekit.net/af/2ed003/00000000000000003b9b011c/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("woff"), url("https://use.typekit.net/af/2ed003/00000000000000003b9b011c/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("opentype");
+  font-display: auto;
+  font-style: italic;
+  font-weight: 400;
+  font-stretch: normal;
+}
+@font-face {
+  font-family: "arboria";
+  src: url("https://use.typekit.net/af/f350ae/00000000000000003b9b011d/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"), url("https://use.typekit.net/af/f350ae/00000000000000003b9b011d/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"), url("https://use.typekit.net/af/f350ae/00000000000000003b9b011d/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
+  font-display: auto;
+  font-style: normal;
+  font-weight: 400;
+  font-stretch: normal;
+}
+@font-face {
+  font-family: "arboria";
+  src: url("https://use.typekit.net/af/7c0289/00000000000000003b9b0120/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"), url("https://use.typekit.net/af/7c0289/00000000000000003b9b0120/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"), url("https://use.typekit.net/af/7c0289/00000000000000003b9b0120/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
+  font-display: auto;
+  font-style: normal;
+  font-weight: 700;
+  font-stretch: normal;
+}
+@font-face {
+  font-family: "arboria";
+  src: url("https://use.typekit.net/af/1f8fa9/00000000000000003b9b0121/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3") format("woff2"), url("https://use.typekit.net/af/1f8fa9/00000000000000003b9b0121/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3") format("woff"), url("https://use.typekit.net/af/1f8fa9/00000000000000003b9b0121/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3") format("opentype");
+  font-display: auto;
+  font-style: italic;
+  font-weight: 700;
+  font-stretch: normal;
+}
+/* 한글폰트 */
+@font-face {
+  font-family: "SpoqaHanSansNeo";
+  font-style: normal;
+  font-weight: 300;
+  src: url(//ak/font/SpoqaHanSansNeo-Light.eot);
+  src: url(//ak/font/SpoqaHanSansNeo-Light.eot?#iefix) format("embedded-opentype"), url(//ak/font/SpoqaHanSansNeo-Light.woff2) format("woff2"), url(//ak/font/SpoqaHanSansNeo-Light.woff) format("woff"), url(//ak/font/SpoqaHanSansNeo-Light.ttf) format("truetype");
+}
+@font-face {
+  font-family: "SpoqaHanSansNeo";
+  font-style: normal;
+  font-weight: 400;
+  src: url(//ak/font/SpoqaHanSansNeo-Regular.eot);
+  src: url(//ak/font/SpoqaHanSansNeo-Regular.eot?#iefix) format("embedded-opentype"), url(//ak/font/SpoqaHanSansNeo-Regular.woff2) format("woff2"), url(//ak/font/SpoqaHanSansNeo-Regular.woff) format("woff"), url(//ak/font/SpoqaHanSansNeo-Regular.ttf) format("truetype");
+}
+@font-face {
+  font-family: "SpoqaHanSansNeo";
+  font-style: normal;
+  font-weight: 500;
+  src: url(//ak/font/SpoqaHanSansNeo-Medium.eot);
+  src: url(//ak/font/SpoqaHanSansNeo-Medium.eot?#iefix) format("embedded-opentype"), url(//ak/font/SpoqaHanSansNeo-Medium.woff2) format("woff2"), url(//ak/font/SpoqaHanSansNeo-Medium.woff) format("woff"), url(//ak/font/SpoqaHanSansNeo-Medium.ttf) format("truetype");
+}
+@font-face {
+  font-family: "SpoqaHanSansNeo";
+  font-style: normal;
+  font-weight: 700;
+  src: url(//ak/font/SpoqaHanSansNeo-Bold.eot);
+  src: url(//ak/font/SpoqaHanSansNeo-Bold.eot?#iefix) format("embedded-opentype"), url(//ak/font/SpoqaHanSansNeo-Bold.woff2) format("woff2"), url(//ak/font/SpoqaHanSansNeo-Bold.woff) format("woff"), url(//ak/font/SpoqaHanSansNeo-Bold.ttf) format("truetype");
+}
+.tk-arboria {
+  font-family: "arboria", sans-serif;
+}
+
 /* variables */
 /* Layout Style*/
 /* UI Style(Button, Form, Dialogs */
+.content, .topArea {
+  max-width: 2560px;
+  margin: 0 auto;
+}
+
+.topArea {
+  position: relative;
+}
+.topArea .titArea {
+  padding: 66px 0 33px;
+  text-align: center;
+}
+.topArea .titArea .tit {
+  font-weight: 700;
+  font-size: 60px;
+}
+.topArea .titArea .tit .tk-arboria {
+  font-size: 72px;
+  font-weight: 500;
+}
+.topArea .titArea .desc {
+  margin-top: 12px;
+  font-weight: 400;
+  font-size: 18px;
+}
+.topArea .visual {
+  height: 480px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
+
+@media all and (max-width: 1320px) {
+  .content {
+    font-size: 16px;
+  }
+
+  .topArea .visual {
+    height: 240px;
+    background-size: cover;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
