--- a/css/ui.scss
+++ b/css/ui.scss
@@ -1,6 +1,15 @@
 @charset "utf-8";
 /* UI Style(Button, Form, Dialogs */
-
+.blind{
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 1px;
+  font-size: 0;
+  line-height: 0;
+}
 .content, .topArea{
   max-width:2560px;
   margin:0 auto;
@@ -42,4 +51,54 @@
     }
   }
 }
+
+.cont{
+  width:1200px;
+  margin:0 auto;
+  padding:80px 0 90px;
+}
+.bbsWrap{width:100%;}
+.bbsTbl{
+  th{
+    height:53px;
+    vertical-align:middle;
+    border-top:2px solid #0D0D0D;
+    border-bottom:1px solid #0D0D0D;
+    text-align:center;
+    font-weight:500;
+    font-size:16px;
+    color:#0D0D0D;
+  }
+  td{
+    height:85px;
+    border-bottom:1px solid #E8E8E8;
+    vertical-align:middle;
+    text-align: center;
+    font-weight: 400;
+    line-height:1.5;
+    a{
+      display:block;
+      text-align: left;
+      font-size:18px;
+      color:#0D0D0D;
+      &:hover{
+        font-weight:500;
+        color:#00498C;
+      }
+    }
+  }
+}
+.stockTbl td{font-size:14px; height:45px; vertical-align:middle; text-align:center; border-left:1px solid #ededed; word-break:break-all;  font-family:'Rubik', 'Noto Sans KR', NanumGothic, "Nanum Gothic", Dotum, Arial, sans-serif;}
+.table02 tr td, .table03 tr td, .table04 tr td, .table05 tr td{border-bottom:1px solid #ededed;}
+.table04 tr.subject td{border-bottom:1px solid #999; border-left:1px solid #ededed;}
+
+.stock02-table tr td{border-bottom:1px solid #ddd;}
+.stock02-table tr td:first-child{border-left:0;}
+
+.stock03-table th{border:1px solid #afafaf;}
+.stock03-table td{border:1px solid #ddd;}
+.stock03-table td:first-child{background-color:#f7f7f7; border:1px solid #afafaf }
+.stock03-table td.bg{background-color:#fff; border-color:#ddd;}
+.stock03-table .black-line td{border-bottom:1px solid #737373;}
+.stock03-table td.price{text-align:right; padding-right:5px;}
 
