--- a/css/font.scss
+++ b/css/font.scss
@@ -33,41 +33,37 @@
   font-family:'SpoqaHanSansNeo';
   font-style:normal;
   font-weight:300;
-  src:url(//ak/font/SpoqaHanSansNeo-Light.eot);
-  src:url(//ak/font/SpoqaHanSansNeo-Light.eot?#iefix) format('embedded-opentype'),
-  url(//ak/font/SpoqaHanSansNeo-Light.woff2) format('woff2'),
-  url(//ak/font/SpoqaHanSansNeo-Light.woff) format('woff'),
-  url(//ak/font/SpoqaHanSansNeo-Light.ttf) format('truetype');
+  src:url(../font/SpoqaHanSansNeo-Light.eot);
+  src:url(../font/SpoqaHanSansNeo-Light.eot?#iefix) format('embedded-opentype'),
+  url(../font/SpoqaHanSansNeo-Light.woff) format('woff'),
+  url(../font/SpoqaHanSansNeo-Light.ttf) format('truetype');
 }
 @font-face {
   font-family:'SpoqaHanSansNeo';
   font-style:normal;
   font-weight:400;
-  src:url(//ak/font/SpoqaHanSansNeo-Regular.eot);
-  src:url(//ak/font/SpoqaHanSansNeo-Regular.eot?#iefix) format('embedded-opentype'),
-  url(//ak/font/SpoqaHanSansNeo-Regular.woff2) format('woff2'),
-  url(//ak/font/SpoqaHanSansNeo-Regular.woff) format('woff'),
-  url(//ak/font/SpoqaHanSansNeo-Regular.ttf) format('truetype');
+  src:url(../font/SpoqaHanSansNeo-Regular.eot);
+  src:url(../font/SpoqaHanSansNeo-Regular.eot?#iefix) format('embedded-opentype'),
+  url(../font/SpoqaHanSansNeo-Regular.woff) format('woff'),
+  url(../font/SpoqaHanSansNeo-Regular.ttf) format('truetype');
 }
 @font-face {
   font-family:'SpoqaHanSansNeo';
   font-style:normal;
   font-weight:500;
-  src:url(//ak/font/SpoqaHanSansNeo-Medium.eot);
-  src:url(//ak/font/SpoqaHanSansNeo-Medium.eot?#iefix) format('embedded-opentype'),
-  url(//ak/font/SpoqaHanSansNeo-Medium.woff2) format('woff2'),
-  url(//ak/font/SpoqaHanSansNeo-Medium.woff) format('woff'),
-  url(//ak/font/SpoqaHanSansNeo-Medium.ttf) format('truetype');
+  src:url(../font/SpoqaHanSansNeo-Medium.eot);
+  src:url(../font/SpoqaHanSansNeo-Medium.eot?#iefix) format('embedded-opentype'),
+  url(../font/SpoqaHanSansNeo-Medium.woff) format('woff'),
+  url(../font/SpoqaHanSansNeo-Medium.ttf) format('truetype');
 }
 @font-face {
   font-family:'SpoqaHanSansNeo';
   font-style:normal;
   font-weight:700;
-  src:url(//ak/font/SpoqaHanSansNeo-Bold.eot);
-  src:url(//ak/font/SpoqaHanSansNeo-Bold.eot?#iefix) format('embedded-opentype'),
-  url(//ak/font/SpoqaHanSansNeo-Bold.woff2) format('woff2'),
-  url(//ak/font/SpoqaHanSansNeo-Bold.woff) format('woff'),
-  url(//ak/font/SpoqaHanSansNeo-Bold.ttf) format('truetype');
+  src:url(../font/SpoqaHanSansNeo-Bold.eot);
+  src:url(../font/SpoqaHanSansNeo-Bold.eot?#iefix) format('embedded-opentype'),
+  url(../font/SpoqaHanSansNeo-Bold.woff) format('woff'),
+  url(../font/SpoqaHanSansNeo-Bold.ttf) format('truetype');
 }
 .tk-arboria { font-family: "arboria",sans-serif; }
 
