--- a/css/ui.scss
+++ b/css/ui.scss
@@ -88,17 +88,26 @@
     }
   }
 }
-.stockTbl td{font-size:14px; height:45px; vertical-align:middle; text-align:center; border-left:1px solid #ededed; word-break:break-all;  font-family:'Rubik', 'Noto Sans KR', NanumGothic, "Nanum Gothic", Dotum, Arial, sans-serif;}
-.table02 tr td, .table03 tr td, .table04 tr td, .table05 tr td{border-bottom:1px solid #ededed;}
-.table04 tr.subject td{border-bottom:1px solid #999; border-left:1px solid #ededed;}
-
-.stock02-table tr td{border-bottom:1px solid #ddd;}
-.stock02-table tr td:first-child{border-left:0;}
-
-.stock03-table th{border:1px solid #afafaf;}
-.stock03-table td{border:1px solid #ddd;}
-.stock03-table td:first-child{background-color:#f7f7f7; border:1px solid #afafaf }
-.stock03-table td.bg{background-color:#fff; border-color:#ddd;}
-.stock03-table .black-line td{border-bottom:1px solid #737373;}
-.stock03-table td.price{text-align:right; padding-right:5px;}
-
+.bbsList{
+  li{
+    padding:16px 0;
+    border-bottom:1px solid #0D0D0D;
+    font-size:14px;
+    color:#0D0D0D;
+    line-height:1.5;
+    &:first-child{
+      border-top:2px solid #0D0D0D;
+    }
+    a{
+      display:block;
+      text-align: left;
+      font-size:16px;
+      color:#0D0D0D;
+    }
+    .date{
+      display:inline-block;
+      margin-top:6px;
+      color:#777777;
+    }
+  }
+}
