--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ time, mark, audio, video {
   vertical-align: baseline;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
+  word-break: break-word;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -80,6 +81,10 @@ img, a, frame, iframe, fieldset {
 
 a {
   text-decoration: none;
+}
+
+a:-webkit-any-link {
+  color: #0D0D0D;
 }
 
 table {
@@ -176,137 +181,41 @@ caption {
 }
 
 .content, .topArea {
-  max-width: 2560px;
-  margin: 0 auto;
+  position: relative;
+  font-size: 4.2666666667vw;
 }
 
 .topArea {
-  position: relative;
-}
-.topArea .titArea {
-  padding: 66px 0 33px;
+  padding-top: 9.6vw;
   text-align: center;
 }
 .topArea .titArea .tit {
   font-weight: 700;
-  font-size: 60px;
+  font-size: 7.4666666667vw;
+  line-height: 1.5;
 }
 .topArea .titArea .tit .tk-arboria {
-  font-size: 72px;
+  font-size: 9.0666666667vw;
   font-weight: 500;
 }
 .topArea .titArea .desc {
-  margin-top: 12px;
+  height: 11.7333333333vw;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 4vw;
+  line-height: 1.4;
 }
 .topArea .visual {
-  height: 480px;
+  margin-top: 3.2vw;
+  height: 64vw;
   background-position: 50% 50%;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
-@media all and (max-width: 1320px) {
-  .content {
-    font-size: 16px;
-  }
-
-  .topArea .visual {
-    height: 240px;
-    background-size: cover;
-  }
-}
-.cont {
-  width: 1200px;
-  margin: 0 auto;
-  padding: 80px 0 90px;
+.bbs_search {
+  display: flex;
 }
 
-.bbsWrap {
-  width: 100%;
-}
-
-.bbsTbl th {
-  height: 53px;
-  vertical-align: middle;
-  border-top: 2px solid #0D0D0D;
-  border-bottom: 1px solid #0D0D0D;
-  text-align: center;
-  font-weight: 500;
-  font-size: 16px;
-  color: #0D0D0D;
-}
-.bbsTbl td {
-  height: 85px;
-  border-bottom: 1px solid #E8E8E8;
-  vertical-align: middle;
-  text-align: center;
-  font-weight: 400;
-  line-height: 1.5;
-}
-.bbsTbl td a {
-  display: block;
-  text-align: left;
-  font-size: 18px;
-  color: #0D0D0D;
-}
-.bbsTbl td a:hover {
-  font-weight: 500;
-  color: #00498C;
-}
-
-.stockTbl td {
-  font-size: 14px;
-  height: 45px;
-  vertical-align: middle;
-  text-align: center;
-  border-left: 1px solid #ededed;
-  word-break: break-all;
-  font-family: "Rubik", "Noto Sans KR", NanumGothic, "Nanum Gothic", Dotum, Arial, sans-serif;
-}
-
-.table02 tr td, .table03 tr td, .table04 tr td, .table05 tr td {
-  border-bottom: 1px solid #ededed;
-}
-
-.table04 tr.subject td {
-  border-bottom: 1px solid #999;
-  border-left: 1px solid #ededed;
-}
-
-.stock02-table tr td {
-  border-bottom: 1px solid #ddd;
-}
-
-.stock02-table tr td:first-child {
-  border-left: 0;
-}
-
-.stock03-table th {
-  border: 1px solid #afafaf;
-}
-
-.stock03-table td {
-  border: 1px solid #ddd;
-}
-
-.stock03-table td:first-child {
-  background-color: #f7f7f7;
-  border: 1px solid #afafaf;
-}
-
-.stock03-table td.bg {
-  background-color: #fff;
-  border-color: #ddd;
-}
-
-.stock03-table .black-line td {
-  border-bottom: 1px solid #737373;
-}
-
-.stock03-table td.price {
-  text-align: right;
-  padding-right: 5px;
-}
+/* variables */
 
 /*# sourceMappingURL=style.css.map */
