--- a/css/reset.scss
+++ b/css/reset.scss
@@ -10,7 +10,7 @@ del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
+fieldset, form, input, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
@@ -19,7 +19,7 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  font-size: 16px;
   font-family: 'SpoqaHanSansNeo', "돋움", Dotum, Arial, sans-serif;
   font-weight:400;
   font-style:normal;
@@ -34,7 +34,7 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 body {
-  line-height: 1;
+  line-height: 1.4;
 }
 ol, ul {
   list-style: none;
@@ -54,7 +54,7 @@ img {
   vertical-align:middle;
 }
 button {
-  background-color:transparent; cursor:pointer;
+  margin:0; padding:0; background-color:transparent; cursor:pointer; border:none; color:#0D0D0D;
 }
 b, strong {
   font-weight:700;
