--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
+fieldset, form, input, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
@@ -20,7 +20,7 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  font-size: 16px;
   font-family: "SpoqaHanSansNeo", "돋움", Dotum, Arial, sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -37,7 +37,7 @@ footer, header, hgroup, menu, nav, section {
 }
 
 body {
-  line-height: 1;
+  line-height: 1.4;
 }
 
 ol, ul {
@@ -63,8 +63,12 @@ img {
 }
 
 button {
+  margin: 0;
+  padding: 0;
   background-color: transparent;
   cursor: pointer;
+  border: none;
+  color: #0D0D0D;
 }
 
 b, strong {
@@ -185,6 +189,10 @@ caption {
   font-size: 4.2666666667vw;
 }
 
+.cont {
+  padding: 8vw 6.4vw 11.7333333333vw;
+}
+
 .topArea {
   padding-top: 9.6vw;
   text-align: center;
@@ -212,10 +220,107 @@ caption {
   background-size: cover;
 }
 
-.bbs_search {
+.bbs_util .sortWrap {
+  width: 100%;
+}
+.bbs_util .searchWrap {
   display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 3.2vw;
+  height: 11.7333333333vw;
 }
 
+.bbs_sort {
+  position: relative;
+}
+.bbs_sort .bbs_button {
+  position: relative;
+  display: block;
+  width: 100%;
+  text-align: left;
+  height: 11.7333333333vw;
+  font-size: 3.7333333333vw;
+  border-bottom: 1px solid #0D0D0D;
+  font-weight: 400;
+}
+.bbs_sort .bbs_button::after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  width: 4.2666666667vw;
+  height: 4.2666666667vw;
+  transform: translateY(-50%);
+  background: url(../images/ico_arrow_black.png) no-repeat 50% 50%;
+}
+.bbs_sort .bbs_button.on::after {
+  transform: rotate(180deg) translateY(50%);
+}
+.bbs_sort .bbs_sortList {
+  display: none;
+  position: absolute;
+  top: 11.7333333333vw;
+  left: 0;
+  width: 100%;
+  padding: 4.2666666667vw 5.3333333333vw;
+  background-color: #0D0D0D;
+  z-index: 10;
+}
+.bbs_sort .bbs_sortList li a {
+  font-size: 3.7333333333vw;
+  font-weight: 500;
+  color: #fff;
+}
+.bbs_sort .bbs_sortList li + li {
+  margin-top: 2.6666666667vw;
+}
+.bbs_sort .bbs_sortList li.selected a {
+  font-weight: 700;
+  color: #43C9FB;
+}
+
+.btn-search {
+  display: block;
+  width: 6.4vw;
+  height: 6.4vw;
+  background: url(../images/ico_search.png) no-repeat 50% 50%;
+}
+
+.select-input {
+  position: relative;
+  height: 100%;
+  padding-right: 6.4vw;
+  border-bottom: 1px solid #0D0D0D;
+}
+.select-input input {
+  border: none;
+  height: 100%;
+  width: 100%;
+}
+.select-input .btn-search {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+@media all and (min-width: 1321px) {
+  /* PC */
+}
+@media all and (max-width: 960px) {
+  /* mobile */
+  .pc {
+    display: none;
+  }
+}
+@media all and (min-width: 961px) and (max-width: 1320px) {
+  /* 태블릿 */
+}
+@media all and (max-width: 1320px) {
+  /* mobile & 태블릿 */
+}
 /* variables */
 
 /*# sourceMappingURL=style.css.map */
