--- a/css/ui.scss
+++ b/css/ui.scss
@@ -15,6 +15,9 @@
   position:relative;
   font-size: get-vw(16px);
 }
+.cont{
+  padding:get-vw(30px) get-vw(24px) get-vw(44px);
+}
 .topArea{
   padding-top: get-vw(36px);
   text-align:center;
@@ -44,23 +47,108 @@
   }
 }
 
-.bbs_search{
-  display:flex;
+.bbs_util{
+  .sortWrap{
+    width:100%;
+  }
+  .searchWrap{
+    display:flex;
+    justify-content: space-between;
+    width:100%;
+    margin-top:get-vw(12px);
+    height: get-vw(44px)
+  }
 }
-
+.bbs_sort{
+  position:relative;
+  .bbs_button{
+    position: relative;
+    display: block;
+    width: 100%;
+    text-align: left;
+    height: get-vw(44px);
+    font-size: get-vw(14px);
+    border-bottom: 1px solid #0D0D0D;
+    font-weight:400;
+    &::after{
+      content:'';
+      display:block;
+      position: absolute;
+      right:0;
+      top:50%;
+      width: get-vw(16px);
+      height: get-vw(16px);
+      transform: translateY(-50%);
+      background:url(../images/ico_arrow_black.png) no-repeat 50% 50%;
+    }
+    &.on::after{
+      transform: rotate(180deg) translateY(50%);
+    }
+  }
+  .bbs_sortList{
+    display:none;
+    position:absolute;
+    top: get-vw(44px);
+    left: 0;
+    width: 100%;
+    padding: get-vw(16px) get-vw(20px);
+    background-color: #0D0D0D;
+    z-index: 10;
+    li{
+      a{
+        font-size: get-vw(14px);
+        font-weight: 500;
+        color:#fff;
+      }
+      &+li{
+        margin-top: get-vw(10px);
+      }
+      &.selected a{
+        font-weight:700;
+        color:#43C9FB;
+      }
+    }
+  }
+}
+.btn-search{
+  display:block;
+  width:get-vw(24px);
+  height:get-vw(24px);
+  background:url(../images/ico_search.png) no-repeat 50% 50%;
+}
+.select-input{
+  position:relative;
+  height: 100%;
+  padding-right: get-vw(24px);
+  border-bottom:1px solid #0D0D0D;
+  input{
+    border:none;
+    height:100%;
+    width:100%;
+  }
+  .btn-search{
+    position:absolute;
+    right:0;
+    top:50%;
+    transform: translateY(-50%);
+  }
+}
 //
-//@media all and (min-width: 1321px) { /* PC */
+@media all and (min-width: 1321px) { /* PC */
 //  .content, .topArea{
 //    max-width:2560px;
 //    margin:0 auto;
 //  }
-//}
-//@media all and (max-width: 960px) { /* mobile */
-//}
-//@media all and (min-width: 961px) and (max-width: 1320px) { /* 태블릿 */
-//}
-//@media all and (max-width: 1320px) { /* mobile & 태블릿 */
-//}
+}
+@media all and (max-width: 960px) { /* mobile */
+  .pc{
+    display:none;
+  }
+}
+@media all and (min-width: 961px) and (max-width: 1320px) { /* 태블릿 */
+}
+@media all and (max-width: 1320px) { /* mobile & 태블릿 */
+}
 //
 //.cont{
 //  width:1200px;
