--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,76 @@ caption {
   background-size: cover;
 }
 
+@media all and (max-width: 960px) {
+  .pc {
+    display: none;
+  }
+}
+@media all and (min-width: 961px) {
+  .mo {
+    display: none;
+  }
+
+  .content, .topArea {
+    max-width: 2560px;
+    margin: 0 auto;
+  }
+
+  .topArea {
+    padding-top: 36px;
+  }
+  .topArea .titArea .tit {
+    font-size: 60px;
+  }
+  .topArea .titArea .tit .tk-arboria {
+    font-size: 72px;
+  }
+  .topArea .titArea .desc {
+    height: 100%;
+    font-size: 18px;
+  }
+  .topArea .visual {
+    margin-top: 32px;
+    height: 480px;
+  }
+
+  .cont {
+    margin: 0 auto;
+  }
+}
+@media all and (min-width: 1321px) {
+  .cont {
+    width: 1200px;
+    padding: 80px 0 110px;
+  }
+}
+@media all and (min-width: 961px) and (max-width: 1320px) {
+  .cont {
+    width: 100%;
+    padding: 60px 48px 44px;
+  }
+}
+.bbs_util {
+  margin-bottom: 6.4vw;
+}
+.bbs_util .sortWrap {
+  width: 100%;
+}
+.bbs_util .searchWrap {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 3.2vw;
+  height: 11.7333333333vw;
+}
+.bbs_util .searchWrap .bbs_sort {
+  width: 50%;
+  margin-right: 1.6vw;
+}
+.bbs_util .searchWrap .search-input {
+  margin-left: 1.6vw;
+}
+
 .bbs_sort {
   position: relative;
 }
@@ -265,7 +335,7 @@ caption {
 .bbs_sort .bbs_sortList li + li {
   margin-top: 2.6666666667vw;
 }
-.bbs_sort .bbs_sortList li.selected a {
+.bbs_sort .bbs_sortList li.active a {
   font-weight: 700;
   color: #43C9FB;
 }
@@ -296,30 +366,9 @@ caption {
   transform: translateY(-50%);
 }
 
-.bbs_util .sortWrap {
-  width: 100%;
-}
-.bbs_util .searchWrap {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  margin-top: 3.2vw;
-  height: 11.7333333333vw;
-}
-.bbs_util .searchWrap .bbs_sort {
-  width: 50%;
-  margin-right: 1.6vw;
-}
-.bbs_util .searchWrap .search-input {
-  margin-left: 1.6vw;
-}
-
-.bbsList {
-  margin-top: 6.4vw;
-}
 .bbsList li {
   padding: 16px 0;
-  border-bottom: 1px solid #0D0D0D;
+  border-bottom: 1px solid #E8E8E8;
   font-size: 14px;
   color: #0D0D0D;
   line-height: 1.5;
@@ -340,12 +389,96 @@ caption {
   color: #777777;
 }
 
+.bbsTbl th {
+  height: 53px;
+  vertical-align: middle;
+  border-top: 2px solid #0D0D0D;
+  border-bottom: 1px solid #0D0D0D;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  color: #0D0D0D;
+}
+.bbsTbl td {
+  height: 85px;
+  border-bottom: 1px solid #E8E8E8;
+  vertical-align: middle;
+  text-align: center;
+  font-weight: 400;
+  line-height: 1.5;
+}
+.bbsTbl td a {
+  display: block;
+  text-align: left;
+  font-size: 18px;
+  color: #0D0D0D;
+}
+.bbsTbl td a:hover {
+  font-weight: 500;
+  color: #00498C;
+}
+
+@media all and (min-width: 961px) {
+  .bbs_util {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 12px;
+  }
+  .bbs_util .sortWrap {
+    min-width: 180px;
+    max-width: 20%;
+  }
+  .bbs_util .searchWrap {
+    width: 372px;
+    margin-top: 0;
+    height: 44px;
+  }
+  .bbs_util .searchWrap .bbs_sort {
+    width: 140px;
+    margin-right: 6px;
+  }
+  .bbs_util .searchWrap .search-input {
+    width: 220px;
+    margin-left: 6px;
+  }
+
+  .bbs_sort .bbs_button {
+    height: 44px;
+    font-size: 16px;
+  }
+  .bbs_sort .bbs_button::after {
+    width: 16px;
+    height: 16px;
+  }
+  .bbs_sort .bbs_sortList {
+    top: 44px;
+    padding: 16px 20px;
+  }
+  .bbs_sort .bbs_sortList li a {
+    font-size: 16px;
+  }
+  .bbs_sort .bbs_sortList li + li {
+    margin-top: 10px;
+  }
+
+  .btn-search {
+    width: 24px;
+    height: 24px;
+  }
+
+  .search-input {
+    padding-right: 24px;
+  }
+  .search-input input {
+    font-size: 16px;
+  }
+}
 .paging {
   display: flex;
   justify-content: space-between;
   width: 100%;
   text-align: center;
-  margin: 50px 0;
+  margin: 4vw 0 0;
   font-size: 0;
 }
 .paging > div {
@@ -389,20 +522,35 @@ caption {
   margin-right: -3.4666666667vw;
 }
 
-@media all and (min-width: 1321px) {
-  /* PC */
-}
-@media all and (max-width: 960px) {
-  /* mobile */
-  .pc {
-    display: none;
+@media all and (min-width: 961px) {
+  .paging {
+    display: block;
+    margin: 50px 0 0;
   }
-}
-@media all and (min-width: 961px) and (max-width: 1320px) {
-  /* 태블릿 */
-}
-@media all and (max-width: 1320px) {
-  /* mobile & 태블릿 */
+  .paging > * {
+    display: inline-block;
+  }
+  .paging > div {
+    display: inline-block;
+  }
+  .paging a {
+    width: 40px;
+    height: 40px;
+    font-size: 16px;
+    line-height: 40px;
+  }
+  .paging a.cur {
+    margin: 0 5px;
+  }
+  .paging a.first {
+    margin-left: 0;
+  }
+  .paging a.last {
+    margin-right: 0;
+  }
+  .paging .center {
+    margin: 0 20px;
+  }
 }
 /* Layout Style*/
 header {
