--- a/css/ui.scss
+++ b/css/ui.scss
@@ -46,6 +46,76 @@
     background-size:cover;
   }
 }
+
+@media all and (max-width: 960px) {
+  .pc{
+    display:none;
+  }
+}
+@media all and (min-width: 961px) {
+  .mo{
+    display:none;
+  }
+  .content, .topArea{
+    max-width:2560px;
+    margin:0 auto;
+  }
+  .topArea{
+    padding-top:36px;
+    .titArea {
+      .tit{
+        font-size: 60px;
+        .tk-arboria{
+          font-size: 72px;
+        }
+      }
+      .desc{
+        height:100%;
+        font-size: 18px;
+      }
+    }
+    .visual{
+      margin-top: 32px;
+      height: 480px;
+    }
+  }
+  .cont{
+    margin:0 auto
+  }
+}
+@media all and (min-width: 1321px) {
+  .cont{
+    width:1200px;
+    padding:80px 0 110px;
+  }
+}
+@media all and (min-width: 961px) and (max-width:1320px) {
+  .cont{
+    width:100%;
+    padding:60px 48px 44px;
+  }
+}
+
+.bbs_util{
+  margin-bottom:get-vw(24px);
+  .sortWrap{
+    width:100%;
+  }
+  .searchWrap{
+    display:flex;
+    justify-content: space-between;
+    width:100%;
+    margin-top:get-vw(12px);
+    height: get-vw(44px);
+    .bbs_sort{
+      width:50%;
+      margin-right:get-vw(6px);
+    }
+    .search-input{
+      margin-left:get-vw(6px);
+    }
+  }
+}
 .bbs_sort{
   position:relative;
   .bbs_button{
@@ -90,7 +160,7 @@
       &+li{
         margin-top: get-vw(10px);
       }
-      &.selected a{
+      &.active a{
         font-weight:700;
         color:#43C9FB;
       }
@@ -121,30 +191,10 @@
     transform: translateY(-50%);
   }
 }
-.bbs_util{
-  .sortWrap{
-    width:100%;
-  }
-  .searchWrap{
-    display:flex;
-    justify-content: space-between;
-    width:100%;
-    margin-top:get-vw(12px);
-    height: get-vw(44px);
-    .bbs_sort{
-      width:50%;
-      margin-right:get-vw(6px);
-    }
-    .search-input{
-      margin-left:get-vw(6px);
-    }
-  }
-}
 .bbsList{
-  margin-top:get-vw(24px);
   li{
     padding:16px 0;
-    border-bottom:1px solid #0D0D0D;
+    border-bottom:1px solid #E8E8E8;
     font-size:14px;
     color:#0D0D0D;
     line-height:1.5;
@@ -165,13 +215,98 @@
     }
   }
 }
-
+.bbsTbl{
+  th{
+    height:53px;
+    vertical-align:middle;
+    border-top:2px solid #0D0D0D;
+    border-bottom:1px solid #0D0D0D;
+    text-align:center;
+    font-weight:500;
+    font-size:16px;
+    color:#0D0D0D;
+  }
+  td{
+    height:85px;
+    border-bottom:1px solid #E8E8E8;
+    vertical-align:middle;
+    text-align: center;
+    font-weight: 400;
+    line-height:1.5;
+    a{
+      display:block;
+      text-align: left;
+      font-size:18px;
+      color:#0D0D0D;
+      &:hover{
+        font-weight:500;
+        color:#00498C;
+      }
+    }
+  }
+}
+@media all and (min-width: 961px) {
+  .bbs_util {
+    display:flex;
+    justify-content: space-between;
+    margin-bottom:12px;
+    .sortWrap {
+      min-width:180px;
+      max-width:20%;
+    }
+    .searchWrap {
+      width: 372px;
+      margin-top:0;
+      height: 44px;
+      .bbs_sort {
+        width: 140px;
+        margin-right: 6px;
+      }
+      .search-input {
+        width:220px;
+        margin-left: 6px;
+      }
+    }
+  }
+  .bbs_sort{
+    .bbs_button{
+      height: 44px;
+      font-size: 16px;
+      &::after{
+        width: 16px;
+        height: 16px;
+      }
+    }
+    .bbs_sortList{
+      top: 44px;
+      padding: 16px 20px;
+      li{
+        a{
+          font-size: 16px;
+        }
+        &+li{
+          margin-top: 10px;
+        }
+      }
+    }
+  }
+  .btn-search{
+    width:24px;
+    height:24px;
+  }
+  .search-input{
+    padding-right: 24px;
+    input{
+      font-size:16px;
+    }
+  }
+}
 .paging{
   display:flex;
   justify-content: space-between;
   width:100%;
   text-align: center;
-  margin: 50px 0;
+  margin: get-vw(15px) 0 0;
   font-size:0;
   &>div{
     font-size:0;
@@ -214,56 +349,34 @@
     }
   }
 }
-@media all and (min-width: 1321px) { /* PC */
-//  .content, .topArea{
-//    max-width:2560px;
-//    margin:0 auto;
-//  }
-}
-@media all and (max-width: 960px) { /* mobile */
-  .pc{
-    display:none;
+
+@media all and (min-width: 961px) {
+  .paging{
+    display:block;
+    margin: 50px 0 0;
+    > * {
+      display:inline-block;
+    }
+    &>div{
+      display:inline-block;
+    }
+    a{
+      width: 40px;
+      height: 40px;
+      font-size: 16px;
+      line-height: 40px;
+      &.cur{
+        margin:0 5px;
+      }
+      &.first{
+        margin-left:0;
+      }
+      &.last{
+        margin-right:0;
+      }
+    }
+    .center{
+      margin:0 20px;
+    }
   }
 }
-@media all and (min-width: 961px) and (max-width: 1320px) { /* 태블릿 */
-}
-@media all and (max-width: 1320px) { /* mobile & 태블릿 */
-}
-//
-//.cont{
-//  width:1200px;
-//  margin:0 auto;
-//  padding:80px 0 90px;
-//}
-//.bbsWrap{width:100%;}
-//.bbsTbl{
-//  th{
-//    height:53px;
-//    vertical-align:middle;
-//    border-top:2px solid #0D0D0D;
-//    border-bottom:1px solid #0D0D0D;
-//    text-align:center;
-//    font-weight:500;
-//    font-size:16px;
-//    color:#0D0D0D;
-//  }
-//  td{
-//    height:85px;
-//    border-bottom:1px solid #E8E8E8;
-//    vertical-align:middle;
-//    text-align: center;
-//    font-weight: 400;
-//    line-height:1.5;
-//    a{
-//      display:block;
-//      text-align: left;
-//      font-size:18px;
-//      color:#0D0D0D;
-//      &:hover{
-//        font-weight:500;
-//        color:#00498C;
-//      }
-//    }
-//  }
-//}
-
