--- a/css/variables.scss
+++ b/css/variables.scss
@@ -18,3 +18,13 @@ $bg_2: 		#F3F4F6 !default;
 $bg_3: 		#E8E8E8 !default;
 $bg_footer: 		#202020 !default;
 
+
+@function strip-unit($number) {
+  @if type-of($number) == 'number' and not unitless($number) {
+    @return math.div($number, $number * 0 + 1);
+  }
+  @return $number;
+}
+@function get-vw($px){
+  @return unquote(calc(strip-unit($px) * 100 / 375) + 'vw');
+}
