--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,12 @@ caption {
 .cont {
   padding: 8vw 6.4vw 11.7333333333vw;
 }
+.cont .cont_tit {
+  display: block;
+  text-align: center;
+  font-size: 5.8666666667vw;
+  font-weight: 700;
+}
 
 .topArea {
   padding-top: 9.6vw;
@@ -220,6 +226,58 @@ caption {
   background-size: cover;
 }
 
+@media all and (max-width: 960px) {
+  .pc {
+    display: none;
+  }
+}
+@media all and (min-width: 961px) {
+  .mo {
+    display: none;
+  }
+
+  .content, .topArea {
+    max-width: 2560px;
+    margin: 0 auto;
+  }
+
+  .topArea {
+    padding-top: 36px;
+  }
+  .topArea .titArea .tit {
+    font-size: 60px;
+  }
+  .topArea .titArea .tit .tk-arboria {
+    font-size: 72px;
+  }
+  .topArea .titArea .desc {
+    height: 100%;
+    font-size: 18px;
+  }
+  .topArea .visual {
+    margin-top: 32px;
+    height: 480px;
+  }
+
+  .cont {
+    margin: 0 auto;
+  }
+}
+@media all and (min-width: 1321px) {
+  .cont {
+    width: 1200px;
+    padding: 80px 0 110px;
+  }
+}
+@media all and (min-width: 961px) and (max-width: 1320px) {
+  .cont {
+    width: 100%;
+    padding: 60px 48px 44px;
+  }
+}
+.bbs_util {
+  margin-bottom: 6.4vw;
+}
 .bbs_util .sortWrap {
   width: 100%;
 }
@@ -229,6 +287,13 @@ caption {
   width: 100%;
   margin-top: 3.2vw;
   height: 11.7333333333vw;
+}
+.bbs_util .searchWrap .bbs_sort {
+  width: 50%;
+  margin-right: 1.6vw;
+}
+.bbs_util .searchWrap .search-input {
+  margin-left: 1.6vw;
 }
 
 .bbs_sort {
@@ -276,7 +341,7 @@ caption {
 .bbs_sort .bbs_sortList li + li {
   margin-top: 2.6666666667vw;
 }
-.bbs_sort .bbs_sortList li.selected a {
+.bbs_sort .bbs_sortList li.active a {
   font-weight: 700;
   color: #43C9FB;
 }
@@ -288,38 +353,304 @@ caption {
   background: url(../images/ico_search.png) no-repeat 50% 50%;
 }
 
-.select-input {
+.search-input {
   position: relative;
   height: 100%;
   padding-right: 6.4vw;
   border-bottom: 1px solid #0D0D0D;
 }
-.select-input input {
-  border: none;
+.search-input input {
   height: 100%;
   width: 100%;
+  border: none;
+  font-size: 3.7333333333vw;
 }
-.select-input .btn-search {
+.search-input .btn-search {
   position: absolute;
   right: 0;
   top: 50%;
   transform: translateY(-50%);
 }
 
-@media all and (min-width: 1321px) {
-  /* PC */
+.bbsList li {
+  padding: 16px 0;
+  border-bottom: 1px solid #E8E8E8;
+  font-size: 14px;
+  color: #0D0D0D;
+  line-height: 1.5;
 }
-@media all and (max-width: 960px) {
-  /* mobile */
-  .pc {
-    display: none;
+.bbsList li:first-child {
+  border-top: 2px solid #0D0D0D;
+}
+.bbsList li a {
+  display: block;
+  text-align: left;
+  font-size: 16px;
+  color: #0D0D0D;
+}
+.bbsList li .date {
+  display: inline-block;
+  margin-top: 6px;
+  font-size: 3.7333333333vw;
+  color: #777777;
+}
+
+.bbsTbl th {
+  height: 53px;
+  vertical-align: middle;
+  border-top: 2px solid #0D0D0D;
+  border-bottom: 1px solid #0D0D0D;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  color: #0D0D0D;
+}
+.bbsTbl td {
+  height: 85px;
+  border-bottom: 1px solid #E8E8E8;
+  vertical-align: middle;
+  text-align: center;
+  font-weight: 400;
+  line-height: 1.5;
+}
+.bbsTbl td a {
+  display: block;
+  text-align: left;
+  font-size: 18px;
+  color: #0D0D0D;
+}
+.bbsTbl td a:hover {
+  font-weight: 500;
+  color: #00498C;
+}
+
+@media all and (min-width: 961px) {
+  .bbs_util {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 12px;
+  }
+  .bbs_util .sortWrap {
+    min-width: 180px;
+    max-width: 20%;
+  }
+  .bbs_util .searchWrap {
+    width: 372px;
+    margin-top: 0;
+    height: 44px;
+  }
+  .bbs_util .searchWrap .bbs_sort {
+    width: 140px;
+    margin-right: 6px;
+  }
+  .bbs_util .searchWrap .search-input {
+    width: 220px;
+    margin-left: 6px;
+  }
+
+  .bbs_sort .bbs_button {
+    height: 44px;
+    font-size: 16px;
+  }
+  .bbs_sort .bbs_button::after {
+    width: 16px;
+    height: 16px;
+  }
+  .bbs_sort .bbs_sortList {
+    top: 44px;
+    padding: 16px 20px;
+  }
+  .bbs_sort .bbs_sortList li a {
+    font-size: 16px;
+  }
+  .bbs_sort .bbs_sortList li + li {
+    margin-top: 10px;
+  }
+
+  .btn-search {
+    width: 24px;
+    height: 24px;
+  }
+
+  .search-input {
+    padding-right: 24px;
+  }
+  .search-input input {
+    font-size: 16px;
   }
 }
-@media all and (min-width: 961px) and (max-width: 1320px) {
-  /* 태블릿 */
+.paging {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  text-align: center;
+  margin: 4vw 0 0;
+  font-size: 0;
 }
-@media all and (max-width: 1320px) {
-  /* mobile & 태블릿 */
+.paging > div {
+  font-size: 0;
+}
+.paging a {
+  display: inline-block;
+  vertical-align: middle;
+  width: 10.6666666667vw;
+  height: 10.6666666667vw;
+  text-align: center;
+  font-size: 4.2666666667vw;
+  font-weight: 700;
+  line-height: 10.6666666667vw;
+  color: #ABABAB;
+}
+.paging a:hover, .paging a.active {
+  color: #00498C;
+}
+.paging a.cur {
+  margin: 0 1.3333333333vw;
+}
+.paging a.arrow {
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+.paging a.arrow.disabled {
+  opacity: 0.3;
+  filter: contrast(0.1);
+}
+.paging a.first {
+  background-image: url(../images/ico_arrow_rightbar.png);
+  transform: rotate(180deg);
+  margin-left: -3.4666666667vw;
+}
+.paging a.prev {
+  background-image: url(../images/ico_arrow_right.png);
+  transform: rotate(180deg);
+}
+.paging a.next {
+  background-image: url(../images/ico_arrow_right.png);
+}
+.paging a.last {
+  background-image: url(../images/ico_arrow_rightbar.png);
+  margin-right: -3.4666666667vw;
+}
+
+@media all and (min-width: 961px) {
+  .paging {
+    display: block;
+    margin: 50px 0 0;
+  }
+  .paging > * {
+    display: inline-block;
+  }
+  .paging > div {
+    display: inline-block;
+  }
+  .paging a {
+    width: 40px;
+    height: 40px;
+    font-size: 16px;
+    line-height: 40px;
+  }
+  .paging a.cur {
+    margin: 0 5px;
+  }
+  .paging a.first {
+    margin-left: 0;
+  }
+  .paging a.last {
+    margin-right: 0;
+  }
+  .paging .center {
+    margin: 0 20px;
+  }
+}
+.bbsWrap .cont_tit {
+  font-weight: 500;
+}
+
+.bbs_detail {
+  margin-top: 6.4vw;
+  border-top: 1px solid #0D0D0D;
+}
+.bbs_detail .top {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2.1333333333vw;
+}
+.bbs_detail .top span, .bbs_detail .top em {
+  display: inline-block;
+  font-size: 3.7333333333vw;
+}
+.bbs_detail .top span.item {
+  font-weight: 400;
+  color: #777;
+}
+.bbs_detail .top em.value {
+  margin-left: 5px;
+  font-weight: 500;
+}
+.bbs_detail .bbs-view-content {
+  padding: 9.3333333333vw 0 10.6666666667vw;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #454545;
+  white-space: pre-line;
+}
+
+.bbs-more {
+  border-top: 1px solid #0D0D0D;
+  border-bottom: 1px solid #0D0D0D;
+}
+.bbs-more li {
+  position: relative;
+  padding: 4.2666666667vw 10.6666666667vw 4.2666666667vw 0;
+}
+.bbs-more li + li {
+  border-top: 1px solid #E8E8E8;
+}
+.bbs-more li a {
+  display: block;
+  word-break: keep-all;
+}
+.bbs-more li::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  width: 4.2666666667vw;
+  height: 4.2666666667vw;
+  background: url(../images/ico_arrow_black.png) no-repeat 50% 50%;
+}
+.bbs-more li.prev::after {
+  transform: translateY(-50%) rotate(-180deg);
+}
+
+.btn-area {
+  margin-top: 6.4vw;
+  text-align: center;
+}
+.btn-area a, .btn-area button {
+  display: inline-block;
+}
+
+.btn-p {
+  width: 100%;
+  height: 13.8666666667vw;
+  background: #00498C;
+  text-align: center;
+  line-height: 13.8666666667vw;
+}
+.btn-p span {
+  color: #FFFFFF;
+}
+
+@media all and (min-width: 961px) {
+  .bbs_detail .top .info {
+    display: flex;
+  }
+  .bbs_detail .top .info div + div {
+    margin-left: 50px;
+  }
 }
 /* Layout Style*/
 body.fixed {
